ralsei: run  and remove unnecessary references for copy type methods, as well as add const fn wherever possible

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,6 @@ hyper-rustls = "^0.20"
 isolanguage-1 = "^0.1"
 isocountry = "^0.2"
 http = "^0.2"
-ux = "^0.1"
+num_x = "^0.2"
 strum = "^0.18"
 strum_macros = "^0.18"
