--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ test = true
 [features]
 default = ["client", "mii-renderer"]
 
-client = ["tokio", "quick-xml", "ring", "rustls", "futures", "hyper", "hyper-rustls", "parking_lot"]
+client = ["tokio", "quick-xml", "ring", "hyper-tls", "futures", "hyper", "tokio-tls", "parking_lot", "native-tls"]
 mii-renderer = ["vulkano"]
 
 [dependencies]
@@ -33,8 +33,6 @@ strum = "^0.18"
 strum_macros = "^0.18"
 bitflags = "^1.0"
 http = "^0.2"
-webpki = "^0.21"
-rustls = { version = "^0.17", optional = true }
 
 # dependencies needed by client
 tokio = { version = "^0.2", features = ["full"], optional = true }
@@ -42,8 +40,14 @@ quick-xml = { version = "^0.18", features = ["serialize"], optional = true }
 ring = { version = "^0.16", optional = true }
 futures = { version = "^0.3", optional = true }
 hyper = { version = "^0.13", optional = true }
-hyper-rustls = { version = "^0.20", optional = true }
 parking_lot = { version = "^0.10", features = ["nightly"], optional = true }
+hyper-tls = { version = "^0.4", optional = true }
+native-tls = { version = "^0.2", optional = true }
+tokio-tls = { version = "^0.3", optional = true }
 
 # dependencies needed by mii-renderer
 vulkano = { version = "^0.19", optional = true }
+
+[dev-dependencies]
+tokio = { version = "^0.2", features = ["full"] }
+clap = { version = "^2.33", features = ["color"] }
