model::certificate + model::console + examples: fix certificate dec/enc, actually encode to base64 when using the device cert in headers, add certificate usage inside example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ strum = "^0.18"
 strum_macros = "^0.18"
 bitflags = "^1.0"
 http = "^0.2"
+base64 = "^0.12"
 
 # dependencies needed by client
 tokio = { version = "^0.2", features = ["full"], optional = true }
