--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ test = true
 [features]
 default = ["client", "mii-renderer"]
 
-client = ["tokio", "hyper-tls", "futures", "hyper", "tokio-tls", "parking_lot", "native-tls"]
+client = ["tokio", "hyper-tls", "futures", "hyper", "tokio-native-tls", "parking_lot", "native-tls"]
 mii-renderer = ["vulkano"]
 
 [dependencies]
@@ -38,13 +38,13 @@ async-trait = "^0.1"
 quick-xml = "^0.20"
 
 # dependencies needed by client
-tokio = { version = "^0.3", features = ["full"], optional = true }
+tokio = { version = "^1", features = ["full"], optional = true }
 futures = { version = "^0.3", optional = true }
-hyper = { version = "^0.13", optional = true }
+hyper = { version = "^0.14", features = ["http1", "stream", "runtime", "client"], optional = true }
 parking_lot = { version = "^0.11", features = ["nightly"], optional = true }
 hyper-tls = { version = "^0.4", optional = true }
 native-tls = { version = "^0.2", optional = true }
-tokio-tls = { version = "^0.3", optional = true }
+tokio-native-tls = { version = "^0.3", optional = true }
 
 # dependencies needed by mii-renderer
 vulkano = { version = "^0.19", optional = true }
