ralsei: actually commit the rest of it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
   "keypairs",
   "model",
 
-  # "service/account",
+  "service/account",
 
   # "protocol/rmc",
   # "protocol/prudp-v0",
