--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -15,19 +15,22 @@ name = "ralsei_model"
 test = true
 
 [dependencies]
-thiserror = "^1.0"
+thiserror = "^1"
 num-derive = "^0.3"
 num-traits = "^0.2"
-isolanguage-1 = "^0.2"
-isocountry = "^0.3"
 num_x = "^0.2"
 strum = "^0.20"
 strum_macros = "^0.20"
-bitflags = "^1.0"
+bitflags = "^1"
 http = "^0.2"
 base64 = "^0.13"
-chrono = "^0.4"
+isolanguage-1 = "^0.2"
+isocountry = "^0.3"
+
+[dependencies.hyper]
+version = "^0.14"
+features = ["http1", "stream", "runtime", "client"]
 
 [dependencies.ralsei-util]
 path = "../util"
-version = "^0.0.0"
+version = "^0"
