--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["strip"]
+
 [workspace]
 members = [
   "util",
@@ -16,4 +18,8 @@ members = [
 
 [profile.release]
 opt-level = 3
+codegen-units = 1
+debug = false
+strip = "symbols"
+panic = "abort"
 lto = "fat"
