--- a/keypairs/Cargo.toml
+++ b/keypairs/Cargo.toml
@@ -4,7 +4,7 @@ description = "a crate containing the keypairs necessary to authenticate with ni
 version = "0.0.0"
 authors = ["superwhiskers <whiskerdev@protonmail.com>"]
 repository = "https://github.com/superwhiskers/ralsei"
-readme = "https://github.com/superwhiskers/ralsei/blob/master/keypairs/readme.md"
+readme = "readme.md"
 keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
 categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
 edition = "2018"
