--- a/model/Cargo.toml
+++ b/model/Cargo.toml
@@ -4,7 +4,7 @@ description = "datatype models used by the rest of the ralsei ecosystem"
 version = "0.0.0"
 authors = ["superwhiskers <whiskerdev@protonmail.com>"]
 repository = "https://github.com/superwhiskers/ralsei"
-readme = "https://github.com/superwhiskers/ralsei/blob/master/model/readme.md"
+readme = "readme.md"
 keywords = ["nintendo-network", "web", "nintendo", "http", "api", "async", "parser", "protocol", "xml", "network", "client", "server", "networking"]
 categories = ["API bindings", "Encoding", "Network programming", "Parser implementations"]
 edition = "2018"
@@ -15,22 +15,22 @@ name = "ralsei_model"
 test = true
 
 [dependencies]
-thiserror = "^1"
-num-derive = "^0.3"
-num-traits = "^0.2"
-num_x = "^0.2"
-strum = "^0.20"
-strum_macros = "^0.20"
-bitflags = "^1"
-http = "^0.2"
-base64 = "^0.13"
-isolanguage-1 = "^0.2"
-isocountry = "^0.3"
+thiserror = "1"
+num-derive = "0.3"
+num-traits = "0.2"
+strum = "0.20"
+strum_macros = "0.20"
+bitflags = "1"
+http = "0.2"
+base64 = "0.13"
+isolanguage-1 = "0.2"
+isocountry = "0.3"
+unin = "0"
 
 [dependencies.hyper]
-version = "^0.14"
+version = "0.14"
 features = ["http1", "stream", "runtime", "client"]
 
 [dependencies.ralsei-util]
 path = "../util"
-version = "^0"
+version = "0"
